@@ -25,6 +25,7 @@ The following bugs are resolved with this release:
   [27651] Performance regression after updating to 2.33
   [27706] select fails to update timeout on error
   [27744] Support different libpthread/ld.so load orders for gdb -p
+  [27892] powerpc: scv ABI error handling fails to check IS_ERR_VALUE
 
 Version 2.33
 
